force-app/main/default/objects/Prime_technicien__c/Prime_technicien__c.object-meta.xml
<CustomObject>
    <description>Objet Personnalisé pour BW afin de gérer les Primes Techniciens, concernant les Produits de traitement d&apos;eau</description>
    <label>Prime Technicien</label>
    <nameField>
        <displayFormat>PT-{YY}{MM}-{00000}</displayFormat>
        <label>Nom de Prime technicien</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Primes Techniciens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>