force-app/main/default/objects/Prime_technicien__c/fields/Nom_du_Technicien_Titulaire__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_Technicien_Titulaire__c</fullName>
    <formula>PT_Compte__r.Technicien_titulaire__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technicien Titulaire du compte</label>
    <type>Text</type>
</CustomField>