force-app/main/default/objects/Prime_technicien__c/fields/PT_Base_de_calcul__c.field-meta.xml
<CustomField>
    <fullName>PT_Base_de_calcul__c</fullName>
    <label>Base de calcul</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commande</fullName>
                <default>true</default>
                <label>Commande</label>
            </value>
            <value>
                <fullName>Saisie manuelle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>