force-app/main/default/objects/Prime_technicien__c/fields/PT_Base_de_calcul_prime_manuelle__c.field-meta.xml
<CustomField>
    <fullName>PT_Base_de_calcul_prime_manuelle__c</fullName>
    <label>Base de calcul prime manuelle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>