force-app/main/default/objects/Prime_technicien__c/fields/PT_Compte__c.field-meta.xml
<CustomField>
    <fullName>PT_Compte__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Primes Techniciens</relationshipLabel>
    <relationshipName>Primes_Techniciens</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>