force-app/main/default/objects/Prime_technicien__c/fields/PT_Date_de_la_commande__c.field-meta.xml
<CustomField>
    <fullName>PT_Date_de_la_commande__c</fullName>
    <formula>PT_Num_Commande__r.EffectiveDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de la commande</label>
    <type>Date</type>
</CustomField>