force-app/main/default/objects/Prime_technicien__c/fields/PT_Montant_de_base__c.field-meta.xml
<CustomField>
    <fullName>PT_Montant_de_base__c</fullName>
    <formula>IF( text(PT_Base_de_calcul__c) = &apos;Commande&apos;,  PT_Montant_HT_Commande__c ,   PT_Base_de_calcul_prime_manuelle__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant de base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>