force-app/main/default/objects/Prime_technicien__c/fields/PT_Montant_HT_Commande__c.field-meta.xml
<CustomField>
    <fullName>PT_Montant_HT_Commande__c</fullName>
    <formula>PT_Num_Commande__r.ORD_MontantHT_ERP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant HT Commande</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>