force-app/main/default/objects/Prime_technicien__c/fields/PT_Montant_Prime_Suppleant__c.field-meta.xml
<CustomField>
    <fullName>PT_Montant_Prime_Suppleant__c</fullName>
    <formula>IF( PT_Technicien_suppleant_benef__c &lt;&gt; &apos;&apos; , (( PT_Montant_de_base__c  * 3)/100)/2, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant Prime Suppléant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>