force-app/main/default/objects/Prime_technicien__c/fields/PT_Num_Commande__c.field-meta.xml
<CustomField>
    <fullName>PT_Num_Commande__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>N° Commande</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <filterItems>
            <field>$Source.PT_Compte__c</field>
            <operation>equals</operation>
            <valueField>Order.ORD_CompteFacture__r.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Order.ORD_SousDomaine__c</field>
            <operation>equals</operation>
            <value>PRODUIT DE CONDITIONNEMENT</value>
        </filterItems>
        <filterItems>
            <field>$Source.PT_Compte__c</field>
            <operation>equals</operation>
            <valueField>Order.ORD_ClientLivre__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Primes Techniciens</relationshipLabel>
    <relationshipName>Primes_Techniciens</relationshipName>
    <type>Lookup</type>
</CustomField>