force-app/main/default/objects/Prime_technicien__c/fields/PT_Numero_de_commande_ERP__c.field-meta.xml
<CustomField>
    <fullName>PT_Numero_de_commande_ERP__c</fullName>
    <formula>PT_Num_Commande__r.ORD_ReferenceCommande__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro de commande ERP</label>
    <type>Text</type>
</CustomField>