force-app/main/default/objects/Prime_technicien__c/fields/PT_Periode__c.field-meta.xml
<CustomField>
    <fullName>PT_Periode__c</fullName>
    <label>Période</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Periodes</valueSetName>
    </valueSet>
</CustomField>