force-app/main/default/objects/Prime_technicien__c/fields/PT_Technicien_suppleant_benef__c.field-meta.xml
<CustomField>
    <fullName>PT_Technicien_suppleant_benef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technicien Suppléant Bénéficiaire</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Primes Techniciens (Technicien Suppléant bénéficiaire)</relationshipLabel>
    <relationshipName>Primes_Techniciens1</relationshipName>
    <type>Lookup</type>
</CustomField>