force-app/main/default/objects/Prime_technicien__c/fields/PT_Technicien_Suppleant_compte__c.field-meta.xml
<CustomField>
    <fullName>PT_Technicien_Suppleant_compte__c</fullName>
    <formula>PT_Compte__r.ACC_TechnicienSuppleant__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technicien Suppléant du compte</label>
    <type>Text</type>
</CustomField>