force-app/main/default/objects/Prime_technicien__c/fields/PT_Technicien_Titulaire_beneficiaire__c.field-meta.xml
<CustomField>
    <fullName>PT_Technicien_Titulaire_beneficiaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technicien Titulaire Bénéficiaire</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Primes Techniciens</relationshipLabel>
    <relationshipName>Primes_Techniciens</relationshipName>
    <type>Lookup</type>
</CustomField>