force-app/main/default/objects/Prime_technicien__c/fields/PT_Territoire_de_Service__c.field-meta.xml
<CustomField>
    <fullName>PT_Territoire_de_Service__c</fullName>
    <formula>PT_Compte__r.ACC_TerritoireDeService__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territoire de Service</label>
    <type>Text</type>
</CustomField>