force-app/main/default/objects/Prime_technicien__c/fields/PT_Validee__c.field-meta.xml
<CustomField>
    <fullName>PT_Validee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validée</label>
    <type>Checkbox</type>
</CustomField>