force-app/main/default/objects/Prime_technicien__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>PT_Periode__c</columns>
    <columns>PT_Compte__c</columns>
    <columns>NAME</columns>
    <columns>PT_Base_de_calcul__c</columns>
    <columns>PT_Num_Commande__c</columns>
    <columns>PT_Montant_de_base__c</columns>
    <columns>PT_Montant_Prime_Titulaire__c</columns>
    <columns>Nom_du_Technicien_Titulaire__c</columns>
    <columns>PT_Validee__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>