force-app/main/default/objects/Prime_technicien__c/listViews/PT_2021_04.listView-meta.xml
<ListView>
    <fullName>PT_2021_04</fullName>
    <columns>PT_Periode__c</columns>
    <columns>PT_Territoire_de_Service__c</columns>
    <columns>NAME</columns>
    <columns>PT_Validee__c</columns>
    <columns>PT_Compte__c</columns>
    <columns>PT_Num_Commande__c</columns>
    <columns>PT_Numero_de_commande_ERP__c</columns>
    <columns>PT_Date_de_la_commande__c</columns>
    <columns>PT_Montant_HT_Commande__c</columns>
    <columns>PT_Base_de_calcul__c</columns>
    <columns>PT_Montant_de_base__c</columns>
    <columns>PT_Montant_Prime_Titulaire__c</columns>
    <columns>Nom_du_Technicien_Titulaire__c</columns>
    <columns>PT_Technicien_Suppleant_compte__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PT_Periode__c</field>
        <operation>equals</operation>
        <value>2021-04</value>
    </filters>
    <filters>
        <field>PT_Territoire_de_Service__c</field>
        <operation>notEqual</operation>
        <value>a</value>
    </filters>
    <filters>
        <field>PT_Numero_de_commande_ERP__c</field>
        <operation>startsWith</operation>
        <value>PRO</value>
    </filters>
    <label>2021-04</label>
</ListView>