force-app/main/default/objects/Prime_technicien__c/listViews/X2021_07.listView-meta.xml
<ListView>
    <fullName>X2021_07</fullName>
    <columns>NAME</columns>
    <columns>PT_Validee__c</columns>
    <columns>PT_Compte__c</columns>
    <columns>PT_Num_Commande__c</columns>
    <columns>PT_Numero_de_commande_ERP__c</columns>
    <columns>PT_Date_de_la_commande__c</columns>
    <columns>PT_Montant_HT_Commande__c</columns>
    <columns>PT_Base_de_calcul__c</columns>
    <columns>PT_Base_de_calcul_prime_manuelle__c</columns>
    <columns>PT_Montant_de_base__c</columns>
    <columns>PT_Montant_Prime_Titulaire__c</columns>
    <columns>Nom_du_Technicien_Titulaire__c</columns>
    <columns>PT_Technicien_Titulaire_beneficiaire__c</columns>
    <columns>PT_Technicien_Suppleant_compte__c</columns>
    <columns>PT_Technicien_suppleant_benef__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PT_Periode__c</field>
        <operation>equals</operation>
        <value>2021-07</value>
    </filters>
    <label>2021-07</label>
</ListView>